public rss endpoint; fix swagger
