# internal/api/swagger/swagger.yaml
@@ -328,25 +328,6 @@ paths:
       summary: Get feeds matching the given parameters
       tags:
       - Feeds
-  /feeds/rss/{id}:
-    get:
-      operationId: GetRss
-      parameters:
-      - description: Feed ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - text/xml
-      responses:
-        "200":
-          description: XML feed in XML format
-      security:
-      - Authentication: []
-      summary: Returns a response with the XML feed in XML format
-      tags:
-      - Feeds
   /files/upload:
     post:
       consumes:
